Updated logo, and fixed overflow in header icons.

--- a/app/master/common/logo-bg/view.styl
+++ b/app/master/common/logo-bg/view.styl
@@ -1,13 +1,12 @@
 // http://css-tricks.com/examples/ShapesOfCSS/
-$logo-bg($height, $bg, $image)
-
-	$width = ($height / 0.9)
+$logo-bg($height, $bg, $image, $margin=0.5rem)
+	$width  = $height * 1.5
 
 	display    : block
 	overflow   : hidden
 	position   : relative
-	width      : $width
-	height     : $height
+	width      : ($width  + $margin)
+	height     : ($height + $margin)
 	background : transparent
 
 	&:after
@@ -19,22 +18,23 @@ $logo-bg($height, $bg, $image)
 		top      : 0
 		left     : 0
 
+	// Logo
 	&:after
 		z-index             : 1
-		width               : $width
-		height              : $height
+		width               : ($width  + $margin)
+		height              : ($height + $margin)
 		background-image    : $image
-		background-size     : ($width * 0.9) auto
+		background-size     : $width auto
 		background-repeat   : no-repeat
-		background-position : ($width * 0.05) $height - ($height - ($height * 0.1))
+		background-position : ($margin / 2) ($margin / 2)
 
 	&:before
 		z-index                    : 1
-		width                      : 75%
+		width                      : 70%
 		height                     : 100%
 		margin-left                : -11%
-		margin-top                 : -4%
-		border-bottom-right-radius : 45%
-		border-bottom-left-radius  : 45%
+		margin-top                 : -0%
+		border-bottom-right-radius : 50%
+		border-bottom-left-radius  : 50%
 		bottom                     : 0
 		background-color           : $bg
